tests/ui/parser/trait-pub-assoc-ty.stderr
error[E0449]: unnecessary visibility qualifier
  --> $DIR/trait-pub-assoc-ty.rs:2:5
   |
LL |     pub type Foo;
   |     ^^^ `pub` not permitted here because it's implied

error: aborting due to previous error

For more information about this error, try `rustc --explain E0449`.
